--- a/index.html
+++ b/index.html
@@ -1,56 +1,15 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Design Portfolio — Starter</title>
-  <link rel="stylesheet" href="assets/style.css">
+    <meta http-equiv="refresh"
+        content="0; url=https://www.notion.so/Reese-Thompson-2706ac9eef30802f9a2ce85677e4d6d5?source=copy_link" />
 </head>
+
 <body>
-  <div class="container">
-    <header class="header">
-      <div>
-        <div class="site-title">Design Portfolio — Starter</div>
-        <div class="badge">Static site for GitHub Pages</div>
-      </div>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="projects/micro-cabin/index.html">Project 1</a>
-        <a href="README.html">How-To</a>
-      </nav>
-    </header>
-
-    <section>
-      <div class="grid">
-        <a class="card" href="projects/micro-cabin/index.html">
-          <img class="thumb" src="assets/images/placeholder.svg" alt="Micro-cabin project thumbnail">
-          <div class="body">
-            <h3 class="h">Project 01 — Micro-Cabin</h3>
-            <p class="p">Your first architecture project: brief, definitions, deliverables, and a built-in checklist.</p>
-          </div>
-        </a>
-
-        <div class="card">
-          <img class="thumb" src="assets/images/placeholder.svg" alt="Placeholder project">
-          <div class="body">
-            <h3 class="h">Project 02 — Coming soon</h3>
-            <p class="p">Parametric pavilion or façade system (Grasshopper/Blender optional).</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="thumb" src="assets/images/placeholder.svg" alt="Placeholder project">
-          <div class="body">
-            <h3 class="h">Project 03 — Coming soon</h3>
-            <p class="p">Pedestrian footbridge concept: span studies, load path diagrams, and context visuals.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="footer">
-      Last updated: 2025-09-27 • Made for quick publishing on GitHub Pages.
-    </footer>
-  </div>
+    <p>If you are not redirected, <a
+            href="https://www.notion.so/Reese-Thompson-2706ac9eef30802f9a2ce85677e4d6d5?source=copy_link">click
+            here</a>.</p>
 </body>
+
 </html>
