--- a/index.html
+++ b/index.html
@@ -590,53 +590,57 @@
             <div class="grid two">
                 <div class="item">
                     <h3>AWS Batch | Software Development Engineer</h3>
-                    <div class="meta">May 2024 - August 2024, July 2025 - Present</div>
+                    <div class="meta">May 2024 – Present · Seattle, WA (On‑site)</div>
                     <ul>
-                        <li>Lead the design of intuitive user interfaces for mobile and web applications, enhancing user
-                            satisfaction and engagement.</li>
-                        <li>Collaborate with cross‑functional teams to create cohesive brand experiences across all
-                            platforms.</li>
-                        <li>Mentor junior designers, fostering a collaborative and innovative design culture.</li>
+                        <li>Software Development Engineer on <a href="https://aws.amazon.com/batch/" target="_blank"
+                                rel="noreferrer noopener">AWS Batch</a>.</li>
+                        <li>Build and maintain distributed systems that orchestrate large‑scale batch workloads on AWS.
+                        </li>
+                        <li>Collaborate with cross‑functional teams to ship reliable, cost‑efficient compute features.
+                        </li>
                     </ul>
                 </div>
                 <div class="item">
                     <h3>Cornell University | Teaching Assistant - Computer Systems Organization</h3>
-                    <div class="meta">January 2023 - May 2025</div>
+                    <div class="meta">Aug 2023 – Aug 2025 · Ithaca, NY (On‑site)</div>
                     <ul>
-                        <li>Developed brand identities, including logos, typography, and color schemes, for over 30
-                            clients.</li>
-                        <li>Produced marketing materials, digital ads, and promotional content, resulting in a 25%
-                            increase in client engagement for key accounts.</li>
+                        <li>Led lab sessions and weekly office hours for CS3410 (Computer Systems Organization).</li>
+                        <li>Guided students through computer organization and C programming fundamentals.</li>
+                        <li>Supported students with debugging, tooling, and conceptual understanding.</li>
                     </ul>
                 </div>
                 <div class="item">
                     <h3>The Hilliard Corporation | Software Developer Intern</h3>
                     <div class="meta">May 2023 - August 2023</div>
                     <ul>
-                        <li>Developed brand identities, including logos, typography, and color schemes, for over 30
-                            clients.</li>
-                        <li>Produced marketing materials, digital ads, and promotional content, resulting in a 25%
-                            increase in client engagement for key accounts.</li>
+                        <li>Developed database‑driven web apps to track research, manufacturing, and engineering
+                            progress.</li>
+                        <li>Built applications with ASP.NET (VB), SQL, HTML, and CSS.</li>
+                        <li>Configured SharePoint sites and automated workflows with Power Automate and HTTP requests.
+                        </li>
                     </ul>
                 </div>
                 <div class="item">
                     <h3>Corning Incorporated | Lab Management Intern</h3>
                     <div class="meta">May 2022 - August 2022</div>
                     <ul>
-                        <li>Developed brand identities, including logos, typography, and color schemes, for over 30
-                            clients.</li>
-                        <li>Produced marketing materials, digital ads, and promotional content, resulting in a 25%
-                            increase in client engagement for key accounts.</li>
+                        <li>Modeled and designed a closed‑loop water‑cooling system to reduce sediment in lab
+                            wastewater.</li>
+                        <li>Coordinated with engineering teams on plans for new machinery and improved lab safety.</li>
+                        <li>Created and updated a chemical inventory database with reactivity/flammability data to
+                            support environmental goals.</li>
                     </ul>
                 </div>
                 <div class="item">
                     <h3>Winchester Optical Company | Lab Technician</h3>
                     <div class="meta">June 2020 - May 2022</div>
                     <ul>
-                        <li>Developed brand identities, including logos, typography, and color schemes, for over 30
-                            clients.</li>
-                        <li>Produced marketing materials, digital ads, and promotional content, resulting in a 25%
-                            increase in client engagement for key accounts.</li>
+                        <li>Received, corrected, and organized incoming orders for eyeglass lenses from doctors
+                            virtually and
+                            physically, and worked many roles throughout the lens manufacturing lab.</li>
+                        <li>Collaborated with co-workers to improve lab efficiency and production.</li>
+                        <li>Worked Summer 2020 and Summer 2021 full time, and part time during the 2020/2021 school
+                            year.</li>
                     </ul>
                 </div>
             </div>
@@ -651,8 +655,8 @@
                     <h3>BS Computer Science — Cornell University</h3>
                     <div class="meta">2025</div>
                     <ul>
-                        <li>Completed with Cum Laude distinction</li>
-                        <li>Joan and Irwin Jacobs Scholar Award</li>
+                        <li>Activities &amp; societies: Joan &amp; Irwin Jacobs Scholar; Cornell Ski Club; Cornell Wind
+                            Symphony.</li>
                     </ul>
                 </div>
                 <div class="item">
@@ -671,39 +675,65 @@
             <h2 id="proj-heading">🚀 Projects</h2>
             <div class="grid two">
                 <div class="item">
-                    <h3>Psychometric Aptitude Test Suite</h3>
-                    <div class="meta">Cornell CS3110 • OCaml • Lambda Psychometric group</div>
-                    <p>Aptitude test suite developed using the OCaml programming language with the Lambda Psychometric
-                        group (Cornell CS3110). The modularly constructed test suite holds a variety of aptitude tests,
-                        with a custom currency‑based incentive system.</p>
+                    <h3>Psychometric Aptitude Test Suite (PATS)</h3>
+                    <div class="meta">Cornell CS3110 • OCaml • Lambda Psychometric Group</div>
+                    <p>
+                        An extensible aptitude-testing suite built in OCaml for CS3110. We designed a modular core
+                        (modules/functors) that standardizes timing, item banks, scoring, and persistence, so new tests
+                        can be added without touching the engine. Includes a CLI runner, JSON configs/results, and
+                        validation. Also included a custom currency-based incentive system.
+                        <br /><strong>Role:</strong> Functional Systems Engineer (team of 3–4)
+                        <br /><strong>Methods:</strong> OCaml modules & functors, immutable data modeling, interface
+                        signatures, property-based + unit testing
+                        <br /><strong>Tools:</strong> OCaml, Dune, OUnit/Alcotest, QCheck, JSON, Git
+                    </p>
                 </div>
+
                 <div class="item">
                     <h3>NLP Business Pitch Viability Engine</h3>
-                    <p>A complete rebranding project for a local café, including logo redesign, packaging, and in‑store
-                        visuals, resulting in a 40% increase in foot traffic.<br />
-                        <strong>Role:</strong> Brand Strategist & Designer<br />
-                        <strong>Tools:</strong> Illustrator, Photoshop, Procreate
+                    <div class="meta">Machine Learning • Python • scikit-learn</div>
+                    <p>
+                        Built a predictor for pitch “viability” by computing similarity to historical Shark Tank deals
+                        (text + structured features) and training a lightweight classifier on those similarity features.
+                        Delivered calibrated probabilities with interpretable feature attributions.
+                        <br /><strong>Role:</strong> Machine Learning Engineer / Data Lead (4-person team)
+                        <br /><strong>Methods:</strong> TF-IDF + cosine similarity, logistic regression (baseline),
+                        cross-validation
+                        <br /><strong>Tools:</strong> Python, scikit-learn, pandas, NumPy
                     </p>
                 </div>
+
                 <div class="item">
                     <h3>ML Hand Recognition</h3>
-                    <p>A complete rebranding project for a local café, including logo redesign, packaging, and in‑store
-                        visuals, resulting in a 40% increase in foot traffic.<br />
-                        <strong>Role:</strong> Brand Strategist & Designer<br />
-                        <strong>Tools:</strong> Illustrator, Photoshop, Procreate
+                    <div class="meta">Computer Vision • Python • NumPy</div>
+                    <p>
+                        A custom multi-layer perceptron to classify rock–paper–scissors outcomes from low-resolution
+                        hand images. Led data prep (normalization) and light augmentation, tuned depth/width,
+                        activation, and regularization, and reached ~95% accuracy on a held-out set.
+                        <br /><strong>Role:</strong> Machine Learning Engineer (2-person team)
+                        <br /><strong>Methods:</strong> MLP (from scratch), k-fold validation
+                        <br /><strong>Tools:</strong> Python, NumPy
                     </p>
                 </div>
+
                 <div class="item">
-                    <h3>AWS CDK Script Automations</h3>
-                    <p>A complete rebranding project for a local café, including logo redesign, packaging, and in‑store
-                        visuals, resulting in a 40% increase in foot traffic.<br />
-                        <strong>Role:</strong> Brand Strategist & Designer<br />
-                        <strong>Tools:</strong> Illustrator, Photoshop, Procreate
+                    <h3>AWS Batch CDK Job Orchestration</h3>
+                    <div class="meta">AWS • IaC • TypeScript/Python</div>
+                    <p>
+                        CDK scripts to spin up and tear down an AWS Batch pipeline for a Python data-file workload. A
+                        helper auto-packages code, builds a Docker image, pushes to ECR, and updates the job
+                        definition—one command to run. Stack includes VPC/compute, job queue, IAM (least-privilege), and
+                        CloudWatch logging.
+                        <br /><strong>Role:</strong> Software Engineer
+                        <br /><strong>Methods:</strong> IaC, automated container builds, ephemeral environments,
+                        observability
+                        <br /><strong>Tools:</strong> AWS CDK, AWS Batch, ECR, Docker, CloudWatch
                     </p>
                 </div>
+
             </div>
-            <!-- NOTE: Some project descriptions appear to be placeholders for branding/Design work; replace with your actual engineering details when ready. -->
         </section>
+
 
         <!-- Skills -->
         <section id="skills" class="card" aria-labelledby="skills-heading">
